--- a/pages/products.html
+++ b/pages/products.html
@@ -104,7 +104,7 @@
 
   </div>
 
-  <!-- <script defer src="./dist/bundle.js"></script> -->
+  <!-- <script defer src="../dist/bundle.js"></script> -->
   <script defer src="../js/app.js"></script>
   <script defer src="../js/cart.js"></script>
   <script defer src="../js/renderItems.js"></script>
